# multi-claude-code-agent

./: README.md  agents_config.json  main.py  pyproject.toml
docs/: spec.md
multi_claude_code_agent/: __init__.py  cli.py
multi_claude_code_agent/config/: __init__.py  agents_config.json  config_manager.py
multi_claude_code_agent/constants/: __init__.py  defaults.py
multi_claude_code_agent/core/: __init__.py  agent.py  orchestrator.py  proxy_manager.py
multi_claude_code_agent/utils/: __init__.py  formatter.py
