[project]
name = "multi-claude-code-agent"
version = "0.1.0"
description = "多模型并行代理分析工具 - 并发调用多个配置了不同底层模型核心的 Claude Code Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.27",
]

[project.scripts]
mca = "multi_claude_code_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
